# jenic

./: .gitignore  CMakeLists.txt  README.md
config/: jenic.h
include/jenic/collector/: collector.h
include/jenic/lexer/: lexer.h  token.h
include/jenic/parser/: ast.h  parser.h
include/jenic/parser/syntax/: function.h  reference.h  return.h  type.h  value.h
include/jenit/lexer/: lexer.h  token.h
lib/: CMakeLists.txt
lib/collector/: CMakeLists.txt  collector.cpp
lib/lexer/: CMakeLists.txt  lexer.cpp
lib/llvm/: CMakeLists.txt
lib/parser/: CMakeLists.txt  parser.cpp
lib/parser/syntax/: expression.cpp  function.cpp  return.cpp  type.cpp  value.cpp
tools/: CMakeLists.txt
tools/jenic/: CMakeLists.txt  main.cpp
